generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "mysql"
  url      = env("DATABASE_URL")
}

//UPDATE THE DB AND PRISMA CLIENT
//npx prisma generate
//npx prisma db push

model User {
  id         String       @id @default(cuid())
  email      String       @unique
  comments   Comment[]
  categories Category[]
  Attachment Attachment[]
  createdAt  DateTime     @default(now())
  updatedAt  DateTime     @updatedAt

  Feedback Feedback[]

  Tag Tag[]

  CommentTag CommentTag[]

  HotkeyMapping HotkeyMapping[]

  Settings Settings[]
}

model Comment {
  id            String          @id @default(cuid())
  title         String?
  body          String          @db.VarChar(1024)
  user          User            @relation(fields: [userId], references: [id], onDelete: Cascade)
  userId        String
  category      Category?       @relation(fields: [categoryId], references: [id])
  categoryId    String?
  isFavourite   Boolean         @default(false)
  order         Int             @default(0)
  useCount      Int             @default(0)
  lastUsedAt    DateTime?
  keywords      Json?
  createdAt     DateTime        @default(now())
  updatedAt     DateTime        @updatedAt
  CommentTag    CommentTag[]
  HotkeyMapping HotkeyMapping[]

  @@index([userId])
  @@index([categoryId])
}

model Tag {
  id        String   @id @default(cuid())
  userId    String
  name      String
  createdAt DateTime @default(now())

  // Relations
  user        User         @relation(fields: [userId], references: [id], onDelete: Cascade)
  commentTags CommentTag[]

  @@unique([userId, name])
}

model CommentTag {
  commentId String
  tagId     String
  userId    String

  // Relations
  comment Comment @relation(fields: [commentId], references: [id], onDelete: Cascade)
  tag     Tag     @relation(fields: [tagId], references: [id], onDelete: Cascade)
  user    User    @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@id([commentId, tagId])
  @@index([userId, tagId])
}

model Category {
  id          String    @id @default(cuid())
  name        String
  description String?
  user        User      @relation(fields: [userId], references: [id], onDelete: Cascade)
  userId      String
  comments    Comment[]
  order       Int
  createdAt   DateTime  @default(now())
  updatedAt   DateTime  @updatedAt

  @@unique([userId, name])
  @@index([userId])
}

model Attachment {
  id           String   @id @default(cuid())
  name         String
  originalName String
  fileType     String
  fileSize     Int
  mimeType     String
  description  String?
  user         User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  userId       String
  url          String
  thumbnailUrl String?
  createdAt    DateTime @default(now())
  updatedAt    DateTime @updatedAt

  @@index([userId])
}

model HotkeyMapping {
  id        String  @id @default(cuid())
  userId    String
  commentId String
  hotkey    String
  isActive  Boolean @default(true)

  // Relations
  user    User    @relation(fields: [userId], references: [id], onDelete: Cascade)
  comment Comment @relation(fields: [commentId], references: [id], onDelete: Cascade)

  @@unique([userId, hotkey])
}

model Feedback {
  id          String   @id @default(cuid())
  title       String
  description String
  user        User     @relation(fields: [userId], references: [id])
  userId      String
  createdAt   DateTime @default(now())
}

model Settings {
  id        String   @id @default(cuid())
  userId    String   @unique
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  settings  Json
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

// TODO
// This commented out Rubric Criteria would be a later feature where rubric criteria could work as a link for comments to help with assisting in comment related to a specific marking criteria of the rubric
// model RubricCriteria {
//   id          String @id @default(cuid())
//   rubricId    String @map("rubric_id")
//   name        String
//   description String?
//   maxPoints   Int?   @map("max_points")
//   sortOrder   Int    @default(0) @map("sort_order")

//   // Relations
//   rubric                  Rubric                   @relation(fields: [rubricId], references: [id], onDelete: Cascade)
//   commentRubricCriteria   CommentRubricCriteria[]

//   @@map("rubric_criteria")
// }

// model CommentRubricCriteria {
//   commentId         String @map("comment_id")
//   rubricCriteriaId  String @map("rubric_criteria_id")

//   // Relations
//   comment         Comment         @relation(fields: [commentId], references: [id], onDelete: Cascade)
//   rubricCriteria  RubricCriteria  @relation(fields: [rubricCriteriaId], references: [id], onDelete: Cascade)

//   @@id([commentId, rubricCriteriaId])
//   @@map("comment_rubric_criteria")
// }
